--- a/eventsite-react/package.json
+++ b/eventsite-react/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^16.13.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "3.4.0",
