--- a/user-microservice/src/main/resources/application.properties
+++ b/user-microservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/eventsite?useSSL=false
 spring.datasource.username= root
-spring.datasource.password= Msd@1234
+spring.datasource.password= 
 
 server.port=8084
